--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Eric Reeves</title>
     <link rel="stylesheet" href="style.css" />
     <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"
+      src="https://kit.fontawesome.com/1a8ef3541f.js" crossorigin="anonymous"></script>"
+      
     ></script>
   </head>
   <body>
