--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Eric Reeves</title>
     <link rel="stylesheet" href="style.css" />
     <script
-      src="https://kit.fontawesome.com/1a8ef3541f.js" crossorigin="anonymous"></script>"
-      
+      src="https://kit.fontawesome.com/1a8ef3541f.js"
+      crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <section id="landing_page">
       <nav>
@@ -42,15 +43,64 @@
               >Contact</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ></a
-            >
-          </li><i class="fa-solid fa-circle-half-stroke"></i>
+            ></a>
+            <i class="fa-solid fa-circle-half-stroke"></i>
+          </li>
         </ul>
       </nav>
+      <header class="header">
+        <div class="herader__content">
+          <h1 class="title">Hey</h1>
+          <h1 class="title blue">I'm Eric</h1>
+          <p class="header__para">
+            I'm a <b class="blue">Frontend Software Engineer</b>with a strong
+            passion for building web applications with a great user experiences.
+            <br />
+            Here's a bit more <b class="blue">about me</b>
+          </p>
+          <div class="social__list">
+            <a
+              href="https://google.com"
+              target="_blank"
+              class="social__link click"
+            >
+              <i class="fa-solid fa-earth-americas"></i>
+            </a>
+            <a href="" class="social__link click">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a
+              href="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/David Bragg Resume.pdf"
+              target="_blank"
+              class="social__link click"
+            >
+              <i class="fa-solid fa-laptop-code"></i>
+            </a>
+          </div>
+        </div>
+      </header>
+      <button class="mail__btn click">
+        <i class="fa-solid fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll">
+        <div class="scroll__icon click"></div>
+      </a>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="blue">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project"></li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
