--- a/index.html
+++ b/index.html
@@ -128,6 +128,70 @@
               </div>
             </li>
           </ul>
+          <ul>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/blinker mockup.png"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Css, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur iste doloremque facere, ex earum totam, illo
+                    quidem perferendis deserunt praesentium adipisci eaque
+                    accusamus, optio fuga voluptates. Itaque fuga et voluptatum.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fa-solid fa-earth-americas"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/blinker mockup.png"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Css, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur iste doloremque facere, ex earum totam, illo
+                    quidem perferendis deserunt praesentium adipisci eaque
+                    accusamus, optio fuga voluptates. Itaque fuga et voluptatum.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fa-solid fa-earth-americas"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
