--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
             ></a>
-            <i class="fa-solid fa-circle-half-stroke"></i>
+            <i class="fa-solid fa-circle-half-stroke link__hover-effect"></i>
           </li>
         </ul>
       </nav>
@@ -195,5 +195,45 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+          <figure>
+            <img
+              class="footer__logo--img"
+              src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/logo.svg"
+              alt=""
+            />
+          </figure>
+          <div class="footer__social--list">
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              Github
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              LinkedIn
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              Contact
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              Resume
+            </a>
+          </div>
+          <div class="footer__copyright">Copyright @ Eric Reeves</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
