--- a/index.html
+++ b/index.html
@@ -94,31 +94,73 @@
           <h3 class="modal__title modal__title--about">
             Here's a bit about me.
           </h3>
-          <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+          <h4 class="modal__sub-title modal__sub-title--about">
+            Frontend Software Engineer
+          </h4>
           <p class="modal__para">
-            I'm a 39 year-old America <b class="blue">frontend software engineer</b> with a strong passion for developing websites with great <b class="blue">user eceriences.</b>
-            I currently work on extremly difficult engineering problems and learn from a team consisting ofsome of the most <b class="blue">talented</b> and <b class="blue">experieced</b> software engineer's every day.
+            I'm a 39 year-old America
+            <b class="blue">frontend software engineer</b> with a strong passion
+            for developing websites with great
+            <b class="blue">user eceriences.</b> I currently work on extremly
+            difficult engineering problems and learn from a team consisting
+            ofsome of the most <b class="blue">talented</b> and
+            <b class="blue">experieced</b> software engineer's every day.
           </p>
           <div class="modal__languages">
             <figure class="modal__language">
-              <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
               <span class="language__name">HTML</span>
             </figure>
             <figure class="modal__language">
-              <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
               <span class="language__name">HTML</span>
             </figure>
             <figure class="modal__language">
-              <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
               <span class="language__name">HTML</span>
             </figure>
             <figure class="modal__language">
-              <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
               <span class="language__name">HTML</span>
             </figure>
           </div>
         </div>
-        <div class="modal__half modal__contact">Lets'have a chat</div>
+        <div class="modal__half modal__contact">
+          <h3 class="modal__title modal__title--contact">Let's have a chat.</h3>
+          <h4 class="modal__sub-title modal__sub-title--contact">
+            I'm currantly open to new opportunities.
+          </h4>
+          <form id="contact__form" action="">
+            <div class="form__item">
+              <label class="form__item--label">Name</label>
+              <input class="input" name="user_name" type="text" required /></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Email</label>
+              <input class="input" name="user_email" type="text" required /></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Message</label>
+              <textarea class="input" name="message" type="text" required /></textarea>
+            </div>
+          </form>
+        </div>
       </div>
     </section>
     <section id="projects">
