--- a/index.html
+++ b/index.html
@@ -153,14 +153,24 @@
             </div>
             <div class="form__item">
               <label class="form__item--label">Email</label>
-              <input class="input" name="user_email" type="text" required /></input>
+              <input class="input" name="user_email" type="email" required /></input>
             </div>
             <div class="form__item">
               <label class="form__item--label">Message</label>
               <textarea class="input" name="message" type="text" required /></textarea>
             </div>
+            <button id="contact__submit" class="form__submit">
+              Send it my way
+            </button>
           </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fa-solid fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay__success">
+            Thanks for the message! Looking forward to speaking to you soon.
+          </div>
         </div>
+        <i class="fa-solid fa-xmark modal__exit click"></i>
       </div>
     </section>
     <section id="projects">
