--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="modal__overlay modal__overlay--loading">
             <i class="fa-solid fa-spinner"></i>
           </div>
-          <div class="modal__overlay modal__overlay__success">
+          <div class="modal__overlay modal__overlay--success">
             Thanks for the message! Looking forward to speaking to you soon.
           </div>
         </div>
