--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Eric Reeves</title>
     <link rel="stylesheet" href="style.css" />
     <script
-      src="https://kit.fontawesome.com/1a8ef3541f.js"
-      crossorigin="anonymous"
+    src="https://kit.fontawesome.com/1a8ef3541f.js"
+    crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
     <script type="text/javascript"
@@ -16,7 +16,7 @@
 <script type="text/javascript">
    (function(){
       emailjs.init({
-        publicKey: "udMjcpxrij46dA8FZ",
+        publicKey: "u12bt9OoI1zBlbshw",
       });
    })();
 </script>
