--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <section id="landing__page">
+    <section id="landing__page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img
@@ -33,7 +33,7 @@
           />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -42,7 +42,7 @@
           </li>
           <li class="nav__link">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Project</a
             >
@@ -59,7 +59,7 @@
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
             ></a>
-            <i class="fa-solid fa-circle-half-stroke link__hover-effect"></i>
+            <i class="fa-solid fa-circle-half-stroke link__hover-effect theme-icon"></i>
           </li>
         </ul>
       </nav>
@@ -183,6 +183,15 @@
           </div>
         </div>
       </div>
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/semi circle.svg" class="shape shape--0">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/circle.svg" class="shape shape--1" >
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/squiggly.svg" class="shape shape--2">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/circle.svg" class="shape shape--3">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/triangle.svg" class="shape shape--4">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/circle.svg" class="shape shape--5">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/squiggly.svg" class="shape shape--6">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/circle.svg" class="shape shape--7">
+      <img src="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/circle.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
