--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click" onclick="toggleModal()">
-        <i class="fa-solid fa-envelope"></i>
-      </button>
+      <a href="#">
+        <button class="mail__btn click" onclick="toggleModal()">
+          <i class="fa-solid fa-envelope"></i>
+        </button>
+
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -316,19 +319,19 @@
               Github
             </a>
             <a
-              href="#"
+              href="#" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               LinkedIn
             </a>
             <a
-              href="#"
+              href="#" onclick="toggleModal()"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Contact
             </a>
             <a
-              href="#"
+              href="./Tutorial Exclusive Eportfolio/Tutorial Exclusive Eportfolio/assets/David Bragg Resume.pdf" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
